deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-demoapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-demoapp
  template:
    metadata:
      labels:
        app: java-demoapp
    spec:
      containers:
        - name: java-demoapp
          image: bencuk/java-demoapp:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /info
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 3
